--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
   },
